UPdated to include tom and updated some of the others

--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -65,15 +65,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           computer deinterlacing program--the inspiration for this project.</li>
         <li>Thanks to all at the AVSForums for your encouragement and help. The 
           HTPC forum is easily the best group on the internet.</li>
-        <li>Thanks to the authors of VirtualDub for the the PAL detection algorithm.</li>
+        <li>Thanks to the authors of VirtualDub for the the idea behind the PAL detection algorithm.</li>
         <li>Thanks to Gunnar Thalin for his area based deinterlacing plug-in which 
-          was the basis for the current deinterlacing method.</li>
+          was the basis for the Video Bob deinterlacing method.</li>
         <li>Thanks to Steaphan Greene, Øyvind Aabling, Octavian Purdila, Vladimir 
-          Dergachev and Christian Lupien&#151;the GATOS developers&#151;for the 
-          screen capture code. </li>
+          Dergachev and Christian Lupien&#151;the GATOS developers&#151;for the
+          original screen capture code. </li>
         <li>Thanks to Torbjörn Jansson for his bug fixes.</li>
         <li>Thanks to Erik Språng for the new DScaler logo. </li>
         <li>Thanks to Phat Phreddy for the new DScaler domains. </li>
+        <li><font SIZE="2">Thanks to Tom Fojta for the Czech teletext code page.</font></li>
         <li>Finally thanks to everybody on the deinterlace project mailing list.</li>
       </ol>
 <!-- #EndEditable -->
