Added saturation fix

--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -69,6 +69,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp; Alpha Logo Killer plug-in
       &nbsp;&nbsp; Alpha Sharpness Filter
       &nbsp;&nbsp; Tom Barry's new all-singing all-dancing Greedy High Motion plugin
+      &nbsp;&nbsp; Increased range of contrast and saturation
       </P>
       <H2>License:</H2>
       <P>This file is subject to the terms of the <A HREF=http://www.gnu.org/copyleft/gpl.html>GNU 
