--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -40,7 +40,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <H1>DScaler - version 3.0.0</H1>
+      <H1>DScaler - version 3.0.5</H1>
       <P>What's new:<br>
       &nbsp;&nbsp; Massive improvements to 2:2 pulldown
       detection.<br>
@@ -52,6 +52,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       settings<br>
       &nbsp;&nbsp; Greedy 2 frame improved (by fixing glaring bug).<br>
       &nbsp;&nbsp; Overlay fixes.<br>
+      &nbsp;&nbsp; Auto-Calibration.<br>
+      &nbsp;&nbsp; Experimental Time-shifting support.<br>
       &nbsp;&nbsp; Improved auto-aspect ratio detect.<br>
       &nbsp;&nbsp; Auto-format detection (switches between PAL and NTSC by
       default)<br>
@@ -64,7 +66,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp; Always on top full screen flag<br>
       &nbsp;&nbsp; Gamma filter fixed<br>
       &nbsp;&nbsp; Various Bug Fixes<br>
-      &nbsp;&nbsp; French code page for teletext&nbsp;<br>
+      &nbsp;&nbsp; French & czech code pages for teletext<br>
       &nbsp;&nbsp; More flexible zoom and positioning<br>
       &nbsp;&nbsp; Alpha Logo Killer plug-in
       &nbsp;&nbsp; Alpha Sharpness Filter
