--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -74,7 +74,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Thanks to Torbjörn Jansson for his bug fixes.</li>
         <li>Thanks to Erik Språng for the new DScaler logo. </li>
         <li>Thanks to Phat Phreddy for the new DScaler domains. </li>
-        <li><font SIZE="2">Thanks to Tom Fojta for the Czech teletext code page.</font></li>
+        <li>Thanks to Tom Fojta for the Czech teletext code page.</li>
+        <li>Thanks to John Isar for the Greek teletext code page.</li>
         <li>Finally thanks to everybody on the deinterlace project mailing list.</li>
       </ol>
 <!-- #EndEditable -->
