--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>DScaler -- Readme Version 2.3</title>
+<title>DScaler -- Readme Version 3.0.6</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -40,7 +40,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <H1>DScaler - version 3.0.5</H1>
+      <H1>DScaler - version 3.0.6</H1>
       <P>What's new:<br>
       &nbsp;&nbsp; Massive improvements to 2:2 pulldown
       detection.<br>
@@ -66,7 +66,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp; Always on top full screen flag<br>
       &nbsp;&nbsp; Gamma filter fixed<br>
       &nbsp;&nbsp; Various Bug Fixes<br>
-      &nbsp;&nbsp; French & czech code pages for teletext<br>
+      &nbsp;&nbsp; French, Czech & Greek code pages for teletext<br>
       &nbsp;&nbsp; More flexible zoom and positioning<br>
       &nbsp;&nbsp; Alpha Logo Killer plug-in
       &nbsp;&nbsp; Alpha Sharpness Filter
