--- a/DScaler/Help/FAQ.htm
+++ b/DScaler/Help/FAQ.htm
@@ -82,7 +82,13 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       helped make DScaler a success.</p>
       <h2>How much does DScaler cost ?</h2>
       <p> $1000 (plus taxes) :-) Of course not, DScaler is fully free of charge,
-      open-source, coded under GPL. 
+      open-source, coded under the <a href="http://www.fsf.org/licenses/gpl.html">GNU GPL Licence</a>. 
+      <h2>Can I ship DScaler with machines I make ?</h2>
+      <h2>Can I redistribute DScaler ?</h2>
+      <p>DScaler is released under the <a href="http://www.fsf.org/licenses/gpl.html">GNU GPL</a> and as such you are free 
+      to redistribute DScaler provided you agree to also distribute the source code. Note that simple linking to our site
+      is not enough. Also it would be nice to <a href="mailto:deinterlace-discuss@lists.sourceforge.net">hear</a> from anybody
+      who is shipping this product as we can add a link to your site and keep track of who is using our software.</p>
       <h1>General issues</h1>
       <h2>Should I use DScaler to deinterlace the output from my set-top dvd player 
         ?</h2>
