Improvements to dynamic menus to remove requirement that they are not empty

--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -105,6 +105,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <blockquote>
         <p>Added the new generic settings dialog and has provided many bug fixes</p>
       </blockquote>
+      <h2>Lindsey Dubb</h2>
+      <blockquote>
+        <p>Provided the new Temporal Comb Filter</p>
+      </blockquote>
       <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
         list of the many others who have contributed time and effort.</p>
 <!-- #EndEditable -->
