--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler -- Thanks</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,78 +22,124 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Thanks&nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3">
-<!-- #BeginEditable "Text" --> 
-      <p> See <a href="Authors.htm">Authors</a> for up to date list of developers 
-        who have contributed code to the project.</p>
-      <p>See <a href="Thanks_MultiDec.txt">Thanks_MultiDec.txt</a> for a list 
-        of thanks for the project DScaler was based upon.</p>
-      <ol>
-        <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 algorithm 
-          and his help testing, promoting DScaler but particularly for his vision 
-          and his refusal to accept second best.</li>
-        <li>Thanks to Michael Samblanet, who contributed the aspect ratio control 
-          code.</li>
-        <li>Thanks to Daniel Schmelzer for his hard work creating and updating 
-          the website.&nbsp;</li>
-        <li>Thanks to Steve Grimm for his work on the new and old methods of 3:2 
-          pulldown and to his contribution of the aspect ratio autodetect code.</li>
-        <li>Thanks to Tom Barry for his implementation of triple buffering and 
-          his synchronization fix, as well as his contribution of low-level user 
-          manipulation of the bt chipset.</li>
-        <li>Thanks to Yvon Quere and Ali for finding, using and promoting bTV 
-          and Yvon for creating and updating the FAQ.</li>
-        <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
-        <li>Thanks to Borg, creator of bTV, for writing the first ever intelligent 
-          computer deinterlacing program--the inspiration for this project.</li>
-        <li>Thanks to all at the AVSForums for your encouragement and help. The 
-          HTPC forum is easily the best group on the internet.</li>
-        <li>Thanks to the authors of VirtualDub for the the idea behind the PAL detection algorithm.</li>
-        <li>Thanks to Gunnar Thalin for his area based deinterlacing plug-in which 
-          was the basis for the Video Bob deinterlacing method.</li>
-        <li>Thanks to Steaphan Greene, Øyvind Aabling, Octavian Purdila, Vladimir 
-          Dergachev and Christian Lupien&#151;the GATOS developers&#151;for the
-          original screen capture code. </li>
-        <li>Thanks to Torbjörn Jansson for his bug fixes.</li>
-        <li>Thanks to Erik Språng for the new DScaler logo. </li>
-        <li>Thanks to Phat Phreddy for the new DScaler domains. </li>
-        <li>Thanks to Tom Fojta for the Czech teletext code page.</li>
-        <li>Thanks to John Isar for the Greek teletext code page.</li>
-        <li>Finally thanks to everybody on the deinterlace project mailing list.</li>
-      </ol>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
+
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler Logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->
+Thanks 
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3">
+<!-- #BeginEditable "Text" -->
+<p>See <a href="Authors.htm">Authors</a> for up to date list of
+developers who have contributed code to the project.</p>
+
+<p>See <a href="Thanks_MultiDec.txt">Thanks_MultiDec.txt</a> for
+a list of thanks for the project DScaler was based upon.</p>
+
+<ol>
+<li>A big debt a gratitude is due to Mark Rejhon for his 3:2
+algorithm and his help testing, promoting DScaler but
+particularly for his vision and his refusal to accept second
+best.</li>
+
+<li>Thanks to Michael Samblanet, who contributed the aspect ratio
+control code.</li>
+
+<li>Thanks to Daniel Schmelzer for his hard work creating and
+updating the website. </li>
+
+<li>Thanks to Steve Grimm for his work on the new and old methods
+of 3:2 pulldown and to his contribution of the aspect ratio
+autodetect code.</li>
+
+<li>Thanks to Tom Barry for his implementation of triple
+buffering and his synchronization fix, as well as his
+contribution of low-level user manipulation of the bt
+chipset.</li>
+
+<li>Thanks to Yvon Quere and Ali for finding, using and promoting
+bTV and Yvon for creating and updating the FAQ.</li>
+
+<li>Thanks to Jason Castle for updating the todo and bugs
+pages.</li>
+
+<li>Thanks to Borg, creator of bTV, for writing the first ever
+intelligent computer deinterlacing program--the inspiration for
+this project.</li>
+
+<li>Thanks to all at the AVSForums for your encouragement and
+help. The HTPC forum is easily the best group on the
+internet.</li>
+
+<li>Thanks to the authors of VirtualDub for the the idea behind
+the PAL detection algorithm.</li>
+
+<li>Thanks to Gunnar Thalin for his area based deinterlacing
+plug-in which was the basis for the Video Bob deinterlacing
+method.</li>
+
+<li>Thanks to Steaphan Greene, &Oslash;yvind Aabling, Octavian
+Purdila, Vladimir Dergachev and Christian Lupien&#151;the GATOS
+developers&#151;for the original screen capture code.</li>
+
+<li>Thanks to Torbj&ouml;rn Jansson for his bug fixes.</li>
+
+<li>Thanks to Erik Spr&aring;ng for the new DScaler logo.</li>
+
+<li>Thanks to Phat Phreddy for the new DScaler domains.</li>
+
+<li>Thanks to Tom Fojta for the Czech teletext code page.</li>
+
+<li>Thanks to John Isar for the Greek teletext code page.</li>
+
+<li>Finally thanks to everybody on the deinterlace project
+mailing list.</li>
+</ol>
+
 <!-- #EndEditable -->
-	</td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
 </table>
-<p>&nbsp;</p>
-</body>
+
+<p> </p>
+
 <!-- #EndTemplate -->
+</body>
 </html>
+
