--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler -- Authors</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,111 +22,151 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->DScaler
-      Authors&nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3">
-<!-- #BeginEditable "Text" --> 
-      <h2>John Adcock</h2>
-      <blockquote> 
-        <p>John is the founder and maintainer of the project. He did huge amounts of full time 
-          development on versions 
-          1.0 through 1.6 Beta 4. He did most of the work cleaning, translating 
-          and legalizing Multidec. He put into code, the world's first open-source 
-          real-time 3:2 pulldown software deinterlacer (based on Mark Rejhon's 
-          algorithm article). He also designed an open-source video-material deinterlacer 
-          that is superior to those in virtually any other any PC-based video 
-          software product.</p>
-      </blockquote>
-      <h2>Mark Rejhon</h2>
-      <blockquote> 
-        <p> 
-          Mark authored the 3:2 pulldown algorithm that forms the basis of the 
-          algorithm implemented into DScaler by John Adcock. He also does other programming 
-          tasks like code cleanup, merging, documenting, testing, enhancing of 
-          contributors' changes that are submitted to the project. He also enhances
-          DScaler with his own changes to certain parts of the code, including improvements 
-          to the deinterlacer modes.</p>
-      </blockquote>
-      <h2>Steve Grimm</h2>
-      <blockquote> 
-        <p>Steve is contributing enhancements to the deinterlacing modes including 
-          better automatic switching between video mode and 3:2 pulldown mode, 
-          and handling of material that has bad 3:2 pulldown. In particular, Steve 
-          made significant modifications to the deinterlacing algorithm in version 
-          2.0.0. He also worked on an early version of a 3:2 pulldown deinterlacing 
-          algorithm. In addition, he is the author of the aspect ratio autodetection 
-          code which was included in version 1.9.</p>
-      </blockquote>
-      <h2>Tom Barry</h2>
-      <blockquote>Tom contributed the triple buffering code and synchronization 
-        fixes for version 2.0.0. Also, he has authored several MMX assembly optimizations 
-        to the video deinterlace mode and added the advanced Brooktree/Conexant 
-        chipset settings menu, both of which were included in version 1.9.</blockquote>
-      <h2>Michael Samblanet</h2>
-      <blockquote> 
-        <p>Michael is continuing to upgrade his aspect ratio control code.<br>
-        </p>
-      </blockquote>
-      <h2>Michael Eskin </h2>
-      <blockquote>
-        <p>An engineer working at Conexant Systems Inc., the makers of the 8x8
-        series chips that DScaler runs on.&nbsp; He basically meditates peace
-        between the DScaler software and the 8x8 video capture hardware.&nbsp; When
-        any of us fails on a nasty 8x8 issue, he takes over and gets the job
-        done from time to time.&nbsp; One of his several valuable contributions
-        include a bug fix to make Macrovision-encoded sources watchable in DScaler,
-        without purple-lines interference.</p>
-      </blockquote>
-      <h2>Laurent Garnier</h2>
-      <blockquote>
-        <p>Despite having really no link with the French DJ, he's the latest one 
-          on the DScaler boat. He coded the auto detection of WSS 
-          (WideScreen Signalling), improved the OSD with various &quot;status 
-          screens&quot;. He also did the popup menu, per-format settings persistency. 
-          He's the second European coder, along with John Adcock.</p>
-      </blockquote>
-      <h2>Torbjörn Jansson</h2>
-      <blockquote>
-        <p>Added the new generic settings dialog and has provided many bug fixes</p>
-      </blockquote>
-      <h2>Lindsey Dubb</h2>
-      <blockquote>
-        <p>Provided the new Temporal Comb Filter</p>
-      </blockquote>
-      <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
-        list of the many others who have contributed time and effort.</p>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
+
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler Logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->DScaler Authors 
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+<h2>John Adcock</h2>
+
+<blockquote>
+<p>John is the founder and maintainer of the project. He did huge
+amounts of full time development on versions 1.0 through 1.6 Beta
+4. He did most of the work cleaning, translating and legalizing
+Multidec. He put into code, the world's first open-source
+real-time 3:2 pulldown software deinterlacer (based on Mark
+Rejhon's algorithm article). He also designed an open-source
+video-material deinterlacer that is superior to those in
+virtually any other any PC-based video software product.</p>
+</blockquote>
+
+<h2>Mark Rejhon</h2>
+
+<blockquote>
+<p>Mark authored the 3:2 pulldown algorithm that forms the basis
+of the algorithm implemented into DScaler by John Adcock. He also
+does other programming tasks like code cleanup, merging,
+documenting, testing, enhancing of contributors' changes that are
+submitted to the project. He also enhances DScaler with his own
+changes to certain parts of the code, including improvements to
+the deinterlacer modes.</p>
+</blockquote>
+
+<h2>Steve Grimm</h2>
+
+<blockquote>
+<p>Steve is contributing enhancements to the deinterlacing modes
+including better automatic switching between video mode and 3:2
+pulldown mode, and handling of material that has bad 3:2
+pulldown. In particular, Steve made significant modifications to
+the deinterlacing algorithm in version 2.0.0. He also worked on
+an early version of a 3:2 pulldown deinterlacing algorithm. In
+addition, he is the author of the aspect ratio autodetection code
+which was included in version 1.9.</p>
+</blockquote>
+
+<h2>Tom Barry</h2>
+
+<blockquote>Tom contributed the triple buffering code and
+synchronization fixes for version 2.0.0. Also, he has authored
+several MMX assembly optimizations to the video deinterlace mode
+and added the advanced Brooktree/Conexant chipset settings menu,
+both of which were included in version 1.9.</blockquote>
+
+<h2>Michael Samblanet</h2>
+
+<blockquote>
+<p>Michael is continuing to upgrade his aspect ratio control
+code.<br>
+</p>
+</blockquote>
+
+<h2>Michael Eskin</h2>
+
+<blockquote>
+<p>An engineer working at Conexant Systems Inc., the makers of
+the 8x8 series chips that DScaler runs on.  He basically
+meditates peace between the DScaler software and the 8x8 video
+capture hardware.  When any of us fails on a nasty 8x8 issue, he
+takes over and gets the job done from time to time.  One of his
+several valuable contributions include a bug fix to make
+Macrovision-encoded sources watchable in DScaler, without
+purple-lines interference.</p>
+</blockquote>
+
+<h2>Laurent Garnier</h2>
+
+<blockquote>
+<p>Despite having really no link with the French DJ, he's the
+latest one on the DScaler boat. He coded the auto detection of
+WSS (WideScreen Signalling), improved the OSD with various
+"status screens". He also did the popup menu, per-format settings
+persistency. He's the second European coder, along with John
+Adcock.</p>
+</blockquote>
+
+<h2>Torbj&ouml;rn Jansson</h2>
+
+<blockquote>
+<p>Added the new generic settings dialog and has provided many
+bug fixes</p>
+</blockquote>
+
+<h2>Lindsey Dubb</h2>
+
+<blockquote>
+<p>Provided the new Temporal Comb Filter</p>
+</blockquote>
+
+<p>Please see the <a href="Thanks.htm">Thanks</a> file for an
+incomplete list of the many others who have contributed time and
+effort.</p>
+
 <!-- #EndEditable -->
-	</td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
 </table>
-<p>&nbsp;</p>
-</body>
+
+<p> </p>
+
 <!-- #EndTemplate -->
+</body>
 </html>
+
