--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler -- Readme Version 3.0.6</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,110 +22,145 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->READ ME&nbsp;<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <H1>DScaler - version 3.0.6</H1>
-      <P>What's new:<br>
-      &nbsp;&nbsp; Massive improvements to 2:2 pulldown
-      detection.<br>
-      &nbsp;&nbsp; Improvements to 3:2 pulldown detection on material with bad
-      cadence.<br>
-      &nbsp;&nbsp; New mixer control for users not bypassing the PC with sound.<br>
-      &nbsp;&nbsp; Channel editing with fine tuning<br>
-      &nbsp;&nbsp; New UI support for all most ini file
-      settings<br>
-      &nbsp;&nbsp; Greedy 2 frame improved (by fixing glaring bug).<br>
-      &nbsp;&nbsp; Overlay fixes.<br>
-      &nbsp;&nbsp; Auto-Calibration.<br>
-      &nbsp;&nbsp; Experimental Time-shifting support.<br>
-      &nbsp;&nbsp; Improved auto-aspect ratio detect.<br>
-      &nbsp;&nbsp; Auto-format detection (switches between PAL and NTSC by
-      default)<br>
-      &nbsp;&nbsp; Updated Linear Correction Filter with alpha non-linear zoom
-      mode<br>
-      &nbsp;&nbsp; Improved Sound support<br>
-      &nbsp;&nbsp; Additional card support<br>
-      &nbsp;&nbsp; Teletext fixes (it's working pretty well on UK channels now)<br>
-      &nbsp;&nbsp; NTSC50 mode for Chris Williams<br>
-      &nbsp;&nbsp; Always on top full screen flag<br>
-      &nbsp;&nbsp; Gamma filter fixed<br>
-      &nbsp;&nbsp; Various Bug Fixes<br>
-      &nbsp;&nbsp; French, Czech & Greek code pages for teletext<br>
-      &nbsp;&nbsp; More flexible zoom and positioning<br>
-      &nbsp;&nbsp; Alpha Logo Killer plug-in
-      &nbsp;&nbsp; Alpha Sharpness Filter
-      &nbsp;&nbsp; Tom Barry's new all-singing all-dancing Greedy High Motion plugin
-      &nbsp;&nbsp; Increased range of contrast and saturation
-      </P>
-      <H2>License:</H2>
-      <P>This file is subject to the terms of the <A HREF=http://www.gnu.org/copyleft/gpl.html>GNU 
-        General Public License</A> as published by the Free Software Foundation. 
-        A copy of this license is included with this software distribution in 
-        the file COPYING.html. If you do not have a copy, you may obtain a copy 
-        by writing to the Free Software Foundation, 675 Mass Ave, Cambridge, MA 
-        02139, USA.</P>
-      <P>This software is distributed in the hope that it will be useful, but 
-        WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
-        or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License 
-        for more details</P>
-      <H2>Requirements:</H2>
-      <P>- I think it will run on Win 95/98 and NT. I have tested it on 98, Windows 
-        2000.<br>
-      - You will need a processor faster than about Pentium II 400MHz to use all
-      the features<br>
-      - You will definitely need a PCI TV card with a BT848 BT849 BT878 BT879 
-        in it.<br>
-      - This software will not work with ATI All-in-Wonder or Matrox TV cards.</P>
-      <h1><font color="#FF0000">Warning</font></h1>
-      <P><font color="#FF0000">This program installs a temporary driver while 
-        it runs.&nbsp; This means that some of the code runs inside Ring0 along 
-        with the kernel.&nbsp; What this means is that if anything goes wrong 
-        this program can crash your whole system causing a BSOD in NT or a hanging 
-        95/98.&nbsp; If using a debugger then it it is very important 
-        that the program is allowed to shut down normally.&nbsp; If you use Stop 
-        Debugging while running the program you system WILL crash.</font></P>
-      <P><font color="#FF0000">As a precaution sync the disks before running this 
-        program.&nbsp; Use the sync utility from <a href="http://www.sysinternals.com/">http://www.sysinternals.com/</a> 
-        for whichever operating system you are running.</font></P>
-      <p><a href="Authors.htm">Authors</a></p>
-      <p><a href="Thanks.htm">Thanks</a></p>
-      <p><a href="user_support.htm">Support</a></p>
-      <p><a href="32spec.htm">Mark Rejhon's 3:2 Spec</a></p>
-      <p><a href="IniFile.HTM">Ini File Settings</a></p>
-      <p><a href="keyboard.htm"> Keyboard Shortcuts</a></p>
-      <H2>Enjoy!</H2>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
+
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler Logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->READ ME 
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"><!-- #BeginEditable "Text" -->
+<h1>DScaler - version 3.0.6</h1>
+
+<p>What's new:<br>
+    Massive improvements to 2:2 pulldown detection.<br>
+    Improvements to 3:2 pulldown detection on material with bad
+cadence.<br>
+    New mixer control for users not bypassing the PC with
+sound.<br>
+    Channel editing with fine tuning<br>
+    New UI support for all most ini file settings<br>
+    Greedy 2 frame improved (by fixing glaring bug).<br>
+    Overlay fixes.<br>
+    Auto-Calibration.<br>
+    Experimental Time-shifting support.<br>
+    Improved auto-aspect ratio detect.<br>
+    Auto-format detection (switches between PAL and NTSC by
+default)<br>
+    Updated Linear Correction Filter with alpha non-linear zoom
+mode<br>
+    Improved Sound support<br>
+    Additional card support<br>
+    Teletext fixes (it's working pretty well on UK channels
+now)<br>
+    NTSC50 mode for Chris Williams<br>
+    Always on top full screen flag<br>
+    Gamma filter fixed<br>
+    Various Bug Fixes<br>
+    French, Czech & Greek code pages for teletext<br>
+    More flexible zoom and positioning<br>
+    Alpha Logo Killer plug-in    Alpha Sharpness Filter    Tom
+Barry's new all-singing all-dancing Greedy High Motion plugin   
+Increased range of contrast and saturation</p>
+
+<h2>License:</h2>
+
+<p>This file is subject to the terms of the <a href=
+"http://www.gnu.org/copyleft/gpl.html">GNU General Public
+License</a> as published by the Free Software Foundation. A copy
+of this license is included with this software distribution in
+the file COPYING.html. If you do not have a copy, you may obtain
+a copy by writing to the Free Software Foundation, 675 Mass Ave,
+Cambridge, MA 02139, USA.</p>
+
+<p>This software is distributed in the hope that it will be
+useful, but WITHOUT ANY WARRANTY; without even the implied
+warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+See the GNU General Public License for more details</p>
+
+<h2>Requirements:</h2>
+
+<p>- I think it will run on Win 95/98 and NT. I have tested it on
+98, Windows 2000.<br>
+ - You will need a processor faster than about Pentium II 400MHz
+to use all the features<br>
+ - You will definitely need a PCI TV card with a BT848 BT849
+BT878 BT879 in it.<br>
+ - This software will not work with ATI All-in-Wonder or Matrox
+TV cards.</p>
+
+<h1><font color="#FF0000">Warning</font></h1>
+
+<p><font color="#FF0000">This program installs a temporary driver
+while it runs.  This means that some of the code runs inside
+Ring0 along with the kernel.  What this means is that if anything
+goes wrong this program can crash your whole system causing a
+BSOD in NT or a hanging 95/98.  If using a debugger then it it is
+very important that the program is allowed to shut down
+normally.  If you use Stop Debugging while running the program
+you system WILL crash.</font></p>
+
+<p><font color="#FF0000">As a precaution sync the disks before
+running this program.  Use the sync utility from <a href=
+"http://www.sysinternals.com/">http://www.sysinternals.com/</a>
+for whichever operating system you are running.</font></p>
+
+<p><a href="Authors.htm">Authors</a></p>
+
+<p><a href="Thanks.htm">Thanks</a></p>
+
+<p><a href="user_support.htm">Support</a></p>
+
+<p><a href="32spec.htm">Mark Rejhon's 3:2 Spec</a></p>
+
+<p><a href="IniFile.HTM">Ini File Settings</a></p>
+
+<p><a href="keyboard.htm">Keyboard Shortcuts</a></p>
+
+<h2>Enjoy!</h2>
+
 <!-- #EndEditable -->
-	</td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
 </table>
-<p>&nbsp;</p>
-</body>
+
+<p> </p>
+
 <!-- #EndTemplate -->
+</body>
 </html>
+
