--- a/DScaler/Help/LinearCorrection.HTM
+++ b/DScaler/Help/LinearCorrection.HTM
@@ -1,9 +1,12 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>DScaler -- Linear Correction Settings</title>
-<!-- #EndEditable --> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!-- #EndEditable -->
+<meta http-equiv="Content-Type" content=
+"text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -19,73 +22,115 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
-  </tr>
-  <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Linear Correction Settings<!-- #EndEditable --></b></font></td>
-  </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3">
-<!-- #BeginEditable "Text" --> 
-      <p>Settings specific to the Linear Correction Filter</p>
-       
-      <table border="1">
-        <tr> 
-          <th> 
-            Setting
-          </th>
-          <th> 
-            Default
-          </th>
-          <th> 
-            Description
-          </th>
-        </tr>
-        <tr> 
-          <td> 
-			Sample
-          </td>
-          <td> 
-			0
-          </td>
-          <td> 
-			Put Description Here
-          </td>
-        </tr>
+<tr>
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
+height="1"></td>
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
+height="1"></td>
+</tr>
 
-      </table>
-<!-- #EndEditable -->
-	</td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3">
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
+<tr>
+<td width="160"><img src="images/dscalerlogo.jpg" alt=
+"DScaler Logo"></td>
+<td colspan="2" align="right" valign="bottom"><font face=
+"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+<!-- #BeginEditable "Page%20Title" -->
+Linear Correction Settings
+<!-- #EndEditable --></b></font></td>
+</tr>
+
+<tr bgcolor="#FFCC00" align="right">
+<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
+height="2"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3">
+<!-- #BeginEditable "Text" -->
+<p>The Linear Correction Filter operates in three quite differenet modes
+<ol>
+<li>Trapeziod.  Simple Digital Keystone correction.</li>
+<li>Complex.  Digital Keystone correction with two axes.</li>
+<li>Stretch. 4:3 to 16:9 non-linear zoom mode.</li>
+</ol>
+</p>
+
+<table border="1">
+<tr>
+<th>Setting</th>
+<th>Default</th>
+<th>Description</th>
+</tr>
+
+<tr>
+<td>Do Only Masking</td>
+<td>0</td>
+<td>In Trapeziod and complex modes this flag determines whether to simply crop 
+the picture of to squeeze the picture digitally.</td>
+</tr>
+
+<tr>
+<td>Mask Parameter 1</td>
+<td>0</td>
+<td>In Trapeziod and complex modes this is the precentage shrink to apply at the 
+top of the picture.</td>
+</tr>
+
+<tr>
+<td>Mask Parameter 2</td>
+<td>0</td>
+<td>In Trapeziod mode this is the precentage shrink to apply at the 
+bottom of the picture. In complex mode this is the precentage shrink to apply in the 
+middle of the picture.</td>
+</tr>
+
+<tr>
+<td>Mask Parameter 3</td>
+<td>0</td>
+<td>In complex mode this is the precentage shrink to apply at the 
+bottom of the picture.</td>
+</tr>
+
+<tr>
+<td>Mask Parameter 4</td>
+<td>0</td>
+<td>In complex mode this is the position of the middle section.</td>
+</tr>
 </table>
+
+<!-- #EndEditable -->
+</td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr>
+<td colspan="3"></td>
+</tr>
+
+<tr>
+<td colspan="3"> </td>
+</tr>
+
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
+</table>
+
+<!-- #EndTemplate -->
 </body>
-<!-- #EndTemplate --></html>
+</html>
+
