--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -56,13 +56,11 @@ height="2"></td>
 <h2>John Adcock</h2>
 
 <blockquote>
-<p>John is the founder and maintainer of the project. He did huge
-amounts of full time development on versions 1.0 through 1.6 Beta
-4. He did most of the work cleaning, translating and legalizing
-Multidec. He put into code, the world's first open-source
-real-time 3:2 pulldown software deinterlacer (based on Mark
-Rejhon's algorithm article). He also designed an open-source
-video-material deinterlacer that is superior to those in
+<p>John is the founder and maintainer of the project.  He did almost all of the work 
+cleaning, translating and legalizing Multidec to create the first versions of dTV. 
+He coded the world's first real-time software 3:2 pulldown software deinterlacer
+(based on Mark Rejhon's algorithm article). He has also designed several 
+video-material deinterlacers that are superior to those in
 virtually any other any PC-based video software product.</p>
 </blockquote>
 
@@ -70,12 +68,9 @@ virtually any other any PC-based video software product.</p>
 
 <blockquote>
 <p>Mark authored the 3:2 pulldown algorithm that forms the basis
-of the algorithm implemented into DScaler by John Adcock. He also
-does other programming tasks like code cleanup, merging,
-documenting, testing, enhancing of contributors' changes that are
-submitted to the project. He also enhances DScaler with his own
-changes to certain parts of the code, including improvements to
-the deinterlacer modes.</p>
+of the algorithm implemented into DScaler by John Adcock. He maintained the project
+for three months and during that time made a huge contribution to the project.
+</p>
 </blockquote>
 
 <h2>Steve Grimm</h2>
@@ -103,7 +98,7 @@ both of which were included in version 1.9.</blockquote>
 
 <blockquote>
 <p>Michael is continuing to upgrade his aspect ratio control
-code.<br>
+code.
 </p>
 </blockquote>
 
