--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" -->
-<title>DScaler -- Readme Version 3.0.6</title>
+<title>DScaler -- Readme Version 3.0.7</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
 "text/html; charset=iso-8859-1">
@@ -38,7 +38,8 @@ height="1"></td>
 "DScaler Logo"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
-<!-- #BeginEditable "Page%20Title" -->READ ME 
+<!-- #BeginEditable "Page%20Title" -->
+READ ME
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -53,7 +54,7 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 3.0.6</h1>
+<h1>DScaler - version 3.0.7</h1>
 
 <p>What's new:<br>
     Massive improvements to 2:2 pulldown detection.<br>
@@ -82,9 +83,12 @@ now)<br>
     Various Bug Fixes<br>
     French, Czech & Greek code pages for teletext<br>
     More flexible zoom and positioning<br>
-    Alpha Logo Killer plug-in    Alpha Sharpness Filter    Tom
-Barry's new all-singing all-dancing Greedy High Motion plugin   
-Increased range of contrast and saturation</p>
+    Alpha Logo Killer plug-in<br>
+    Alpha Sharpness Filter<br>
+    Tom Barry's new all-singing all-dancing Greedy High Motion plugin<br>
+    Increased range of contrast and saturation<br>
+    Added Lindsey Dubb's Old Game Filter<br>
+</p>
 
 <h2>License:</h2>
 
