--- a/DScaler/Help/Logging.HTM
+++ b/DScaler/Help/Logging.HTM
@@ -55,7 +55,9 @@ height="2"></td>
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
-<p>Setting specific to Debug Logging</p>
+<p>DScaler has an log feature that is useful for collecting infomation to attach
+to bug reports or for developement.  Under normal circumstances logging should be off. 
+When switched on infomation is written to DScaler.txt in the DScaler directory.</p>
 
 <table border="1">
 <tr>
@@ -65,10 +67,17 @@ height="2"></td>
 </tr>
 
 <tr>
-<td>Sample</td>
-<td>0</td>
-<td>Put Description Here</td>
+<td>Debug Log</td>
+<td>OFF</td>
+<td>Whether logging is on or off.</td>
 </tr>
+
+<tr>
+<td>Debug Level</td>
+<td>1</td>
+<td>The anount of logging to produce, higher values give more detailed output.</td>
+</tr>
+
 </table>
 
 <!-- #EndEditable -->
