--- a/DScaler/Help/Timing.HTM
+++ b/DScaler/Help/Timing.HTM
@@ -65,10 +65,54 @@ height="2"></td>
 </tr>
 
 <tr>
-<td>Sample</td>
-<td>0</td>
-<td>Put Description Here</td>
+<td>Auto Format Detect</td>
+<td>On</td>
+<td>Should we try and spot input format changes</td>
 </tr>
+
+<tr>
+<td>50Hz Format</td>
+<td>PAL</td>
+<td>Mode to use when 50Hz input is detected</td>
+</tr>
+
+<tr>
+<td>60Hz Format</td>
+<td>NTSC</td>
+<td>Mode to use when 60Hz input is detected</td>
+</tr>
+
+<tr>
+<td>Format Change Threshold</td>
+<td>2</td>
+<td>Number of ten field periods when the timing pattern must be repeated before
+switching.</td>
+</tr>
+
+<tr>
+<td>Do JudderTerminator On Video Modes</td>
+<td>ON</td>
+<td>If global JudderTerminator is on then should it be used in video mode.</td>
+</tr>
+
+<tr>
+<td>Sleep Interval</td>
+<td>1</td>
+<td>Number of ms to sleep when waiting.</td>
+</tr>
+
+<tr>
+<td>Sleep Skip Fields</td>
+<td>0</td>
+<td>Can be used to only sleep every so many frames.</td>
+</tr>
+
+<tr>
+<td>Sleep Skip Fields Late</td>
+<td>0</td>
+<td>Can be used to only sleep every so many frames when running late.</td>
+</tr>
+
 </table>
 
 <!-- #EndEditable -->
