--- a/DScaler/Help/OldGame.htm
+++ b/DScaler/Help/OldGame.htm
@@ -55,7 +55,7 @@ height="2"></td>
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
-<p>This filter improves the display of video games from old
+<p>This method improves the display of video games from old
 consoles on your computer. Instead of deinterlacing like most
 DScaler plugins, it smooths vertically. That gets rid of the
 weird jittering you'd otherwise see. It works nicely with just
@@ -66,7 +66,7 @@ Vectrex.</p>
 
 <p>More exactly, this plugin assumes that you're looking at a
 progressive half height image. So any video source which fits
-that description should work well. The Old Game filter is similar
+that description should work well. The Old Game method is similar
 to the OddOnly and EvenOnly plugins, but improves the picture in
 a couple ways. First, it works well with material running at any
 FPS (frames per second) rate, instead of just 25 or 30 FPS.
