Added PAL-NC thanks to Eduardo José Tagle

--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -117,6 +117,8 @@ developers&#151;for the original screen capture code.</li>
 
 <li>Thanks to John Isar for the Greek teletext code page.</li>
 
+<li>Thanks to Eduardo José Tagle for the PAL-NC patch.</li>
+
 <li>Finally thanks to everybody on the deinterlace project
 mailing list.</li>
 </ol>
