--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -88,6 +88,7 @@ now)<br>
     Tom Barry's new all-singing all-dancing Greedy High Motion plugin<br>
     Increased range of contrast and saturation<br>
     Added Lindsey Dubb's Old Game Filter<br>
+    Added PAL-NC mode for Argentina<br>
 </p>
 
 <h2>License:</h2>
